--- a/Spiritual-tour.html
+++ b/Spiritual-tour.html
@@ -1,31 +1,32 @@
 <!doctype html>
 <html lang="en">
 
-
-<!-- Mirrored from onlineinterior.in/hsr/taxi-service-in-south-delhi.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Oct 2025 06:18:27 GMT -->
+<!-- Mirrored from onlineinterior.in/hsr/delhi-to-shimla-taxi.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Oct 2025 06:20:10 GMT -->
 <!-- Added by HTTrack -->
-<!-- Mirrored from hsrtraveldelhi.co.in/taxi-service-in-south-delhi.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Nov 2025 05:35:40 GMT -->
+<!-- Mirrored from hsrtraveldelhi.co.in/delhi-to-shimla-taxi.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Nov 2025 05:37:26 GMT -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>VehicleServices in South Delhi, Book Vehicleon Rent at Lowest Rate</title>
-	<meta name="description"  content="Get Vehicleservice in south Delhi with experienced & well educated drivers. HSR Travel Delhi offers the best Vehicleservices in your nearby locations at lowest price." />
+	<title>Delhi to Shimla Taxi, Book Delhi to Shimla Vehicleat Low Cost</title>
+	<meta name="description"  content="HSR Travel Delhi is the best car rental agency, offering Delhi to Shimla Vehicleservices at best deals. Enjoy the best family tour from Delhi to Shimla via Vehiclewith us." />
 	<link rel="icon" href="img/pt-favicon.png" type="image/png">
+	<link rel="canonical" href="delhi-to-shimla-taxi.html" />
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-datetimepicker.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	<!-- Google Tag Manager -->
+<link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
 
 
 </head>
 <body>
-   
+    <!-- Google Tag Manager (noscript) -->
+
 	<div class="wrapper">
 			<header class="header">
 			<div class="container">
@@ -141,6 +142,14 @@
                                            <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
                                                     Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Chardham Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="Spiritual-tour.html">
+                                                    Spiritual Vehicle Services</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="delhi-to-chardham.html">
@@ -465,130 +474,54 @@
 				</div>
 			</div>
 			<div class="dc-carousel">
-		    	<figure><img src="img/banner1.jpg"></figure>
+		    	<figure><img src="img/za0lstdjh83fkdbaxo9sasoqxbou_shutterstock_2364709833.jpg"></figure>
 		    </div>
 		</div>
 	    <!-- /.carousel -->
 	    <!-- deal slider  -->
 	    <div class="full-width w-bg">
 	    	<div class="container">
-		    	<h1 class="title h-left">VehicleServices in South Delhi</h1>
-		    	<p class="para">HSR Travel Delhi is a ride hailing company which is best known to provide <a href="taxi-booking-on-rent.html">Vehicleservices</a> in South Delhi. Your comfort is our top most priority. When you <a href="car-hiring-services.html">hire a Vehiclefor South Delhi</a> with HSR Travel Delhi you can expect on time service, verify Vehicledriver and verified taxi, well maintained and sanitised with affordable Price. HSR Travel Delhi Vehicleservice in South Delhi will always remain recommend you best and fast Vehicleservice in South Delhi. With HSR Travel Delhi you can expect the cheapest Vehicleservice in South Delhi. We offer smooth, fast and reliable travelling across the South Delhi. Weather it’s a shopping mall, restaurant, Theatre or landmark along with a meet and greet service at airport.</p>
-		    	<p class="para">Vehiclein South Delhi or <a href="car-rental-services.html">car on rent</a> in South Delhi will give you freedom and best possibility to enjoy different location and destination in South Delhi without worrying about timing of any public transportation vehicle. Hiring a Vehiclein South Delhi will give you all the freedom and privacy you want it without spending more money. With the help of HSR Travel Delhi you can easily book Vehicle on rent in South Delhi with just few clicks.</p>
-		    	<h3>Why should you book Vehiclein South Delhi with HSR Travel Delhis?</h3>
-		    	<p class="para">Your comfort is a top most priority and main concern, we provide you train driver and sanitized vehicle. HSR Travel Delhi team member are kind in behaviour and trustworthy who will make your trip more enjoyable and memorable. We will provide you our best services so that we will be happy to have you as our next customer and then us are permanent customer for travelling in South Delhi.</p>
-		    	<style>
-				.accordion {
-				  background-color: white;
-				  color: #444;
-				  cursor: pointer;
-				  padding: 10px;
-				  width: 100%;
-				  border: none;
-				  text-align: left;
-				  outline: none;
-				  font-size: 15px;
-				  transition: 0.4s;
-				  font-weight: 500;
-				}
+		    	<h1 class="title h-left"> Delhi to Spiritual Tour Vehicles on Rent</h1>
+<p class="para">
+Are you planning to book a rental vehicle from Delhi for a spiritual tour? 
+HSR Travel Delhi offers the best vehicle rental services for popular pilgrimage destinations like 
+Mathura, Vrindavan, Haridwar, Rishikesh, Vaishno Devi, Khatu Shyam Ji, and many more. 
+We provide a wide range of rental vehicles including AC, Non-AC, Economical, SUV, Sedan, and 
+Tempo Traveller at reasonable prices to ensure a safe and peaceful journey.
+Book your vehicle with <a href="index-2.html">HSR Travel Delhi</a> and enjoy a holy trip with your family 
+and friends without any hassle.
+</p>
 
-				.active, .accordion:hover {
-				  background-color: ; 
-				}
+<h5>Rental Rates for Delhi to Spiritual Destinations:</h5>
 
-				.panel {
-				  padding: 0 10px;
-				  display: none;
-				  background-color: white;
-				  overflow: hidden;
-				  border-bottom: 2px solid;
-				}
-				.accordion:after {
-				  content: '\02795'; /* Unicode character for "plus" sign (+) */
-				  font-size: 10px;
-				  color: #777;
-				  float: left;
-				  margin-left: 5px;
-				  margin-right: 10px;
-				  margin-top: 3px;
-				}
+<h5>About Spiritual Destinations</h5>
+<p class="para">
+India is home to several sacred places filled with divine energy, ancient temples, and holy rivers. 
+Destinations like Mathura–Vrindavan (birthplace and leelas of Lord Krishna), Haridwar–Rishikesh 
+(Ganga Aarti & spiritual healing), Vaishno Devi (sacred cave temple of the Divine Mother), 
+and Khatu Shyam Ji (temple of Barbarik) attract millions of devotees every year.
+Choosing a rental vehicle from Delhi allows you to comfortably explore these holy places at your own pace.
+</p>
 
-				/*.active:after {*/
-				  content: "\2796"; /* Unicode character for "minus" sign (-) */
-				/*}*/
-				</style>
-		    	<button class="accordion">No Hidden Charges</button>
-				<div class="panel">
-  					<p class="para">Weather your mode off payment is online are offline we provide proper transparency with our customer. Our invoices are clear and precise there are no hidden cost and charges</p>
-				</div>
+<h5>Delhi to Spiritual Tour Packages:</h5>
+<p class="para">
+Make your spiritual journey from Delhi blissful and comfortable with HSR Travel Delhi. 
+We offer the most affordable rental packages for Delhi to Mathura, Vrindavan, Haridwar, 
+Rishikesh, Khatu Shyam Ji, and other pilgrimage destinations.
+Our chauffeurs are trained, experienced, and polite, ensuring a safe, peaceful, and 
+hassle-free travel experience.
+</p>
 
-				<button class="accordion">Affordable best price, no brokers</button>
-				<div class="panel">
-  					<p class="para">We provide Vehiclein South Delhi with our affordable price for every Vehicle</p>
-				</div>
-
-				<button class="accordion">Experienced and trust worthy staff</button>
-				<div class="panel">
-  					<p class="para">A driver chosen on the basis of year of experience in driving with proper documentation and verification.</p>
-				</div>
-
-				<button class="accordion">Easily available</button>
-				<div class="panel">
-  					<p class="para">HSR Travel Delhis Vehicleservice in South Delhi is easily available on time, you can book your Vehiclewithin few minutes at any time anywhere.</p>
-				</div>
-
-				<button class="accordion">Quality service</button>
-				<div class="panel">
-  					<p class="para">HSR Travel Delhi <a href="taxi-booking-on-rent.html">Vehiclerental services</a> never compromises on Quality. When always try to provide best and quality traveling experience to our customers.</p>
-				</div>
-
-				<button class="accordion">Reliable and secure</button>
-				<div class="panel">
-  					<p class="para">Drivers undergo proper training to ensure the safety and comfort of our customers. We ensure 24/7 support to our customers.</p>
-				</div>
-
-				<button class="accordion">Punctual service</button>
-				<div class="panel">
-  					<p class="para">HSR Travel Delhis track record of on-time service. Our call Centre will always in touch with you to ensure no delays while traveling.</p>
-				</div>
-
-				<button class="accordion">Verified driver and vehicles</button>
-				<div class="panel">
-  					<p class="para"><a href="index-2.html">HSR Travel Delhi</a> Always Hire verified and licensed driver and vehicle to ensure our customers safety measures.</p>
-				</div>
-				<script>
-				var acc = document.getElementsByClassName("accordion");
-				var i;
-
-				for (i = 0; i < acc.length; i++) {
-				  acc[i].addEventListener("click", function() {
-				    this.classList.toggle("active");
-				    var panel = this.nextElementSibling;
-				    if (panel.style.display === "block") {
-				      panel.style.display = "none";
-				    } else {
-				      panel.style.display = "block";
-				    }
-				  });
-				}
-				</script>
-                	<h3>Which are the places you can visit in South Delhi? </h3>
-		    	<p class="para">If you are visiting South Delhi here are the list of places you can visit. These are amazing cultural and historic places in South Delhi. If you are a nature lover, then South Delhi is the best place to visit with most beautiful and well kept Gardens like the garden of five senses you can spend your wonderful time in these Garden and enjoy the refreshing natural beauty.</p>
-		            <h3>List of Places you can visit in South Delhi</h3>
-		        <p class="para">There are so many wonderful places you can visit in South Delhi like Qutub Minar, Iron Pillar, Agrasen ki Baoli, Lotus temple, Hauz Khas and many other places. Some of the most visited place are:</p>
-		        <ul class="disc">
-                    <li>Chhatarpur Mandir</li>
-                    <p class="para">It’s a beautiful temple located in South Delhi dedicated to Goodness Katyayani, a part of Navadurga. Chhatarpur Mandir is the second largest temple in India. You must visit this Amazing beautiful temple.</p>
-                    <li>Qutub Minar</li>
-                    <p class="para">Qutub minar is one of the miaret or victory tower located in Qutub complex South Delhi. It is the second tallest monument of Delhi.</p>
-                    <li>Hauz khas Village</li>
-                    <p class="para">It’s is the most happening place in South Delhi. Hauz khas fort is famous for its late night parties, urbane refurbished upmarket and live concert. It is one of the most visited place in South Delhi.</p>
-                    <li>Garden of five senses</li>
-                    <p class="para">Garden of five senses is a place to visit in South Delhi for fun, it is famous for it’s water lilies and refreshing nature vibes. It has spiral walkways, elephants cut out of stones a etc. with other artistic endeavours.</p>
-                </ul>
-                    <p class="para">Now what are you waiting for book your Vehiclein South Delhi with HSR Travel Delhis and visit these amazing place with your loved one.</p>
-		    	
-			    <div class="dc-carousel">
+<p class="para">
+HSR Travel Delhi offers fully customizable one-way, same-day, and multi-day spiritual tour packages 
+from Delhi. Visit our website for more details about our 
+<a href="car-rental-services.html">vehicle rental</a> services. 
+You can also call our customer care at +91 - 8800804024 to get exclusive discounts 
+and seasonal offers on customized pilgrimage packages.
+Book your Delhi Spiritual Tour vehicle with HSR Travel Delhi for a safe, comfortable, 
+and divine travel experience.
+</p>
+		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Vehicle on Rent</h2> -->
   		    </div>
 			    <!-- places to visit -->
@@ -753,7 +686,6 @@
 		</div>
 	</div>
 </div>
-
 
 
 <script src="code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -921,7 +853,7 @@ $(document).ready(function () {
 </body>
 
 
-<!-- Mirrored from onlineinterior.in/hsr/taxi-service-in-south-delhi.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Oct 2025 06:18:27 GMT -->
+<!-- Mirrored from onlineinterior.in/hsr/delhi-to-shimla-taxi.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Oct 2025 06:20:11 GMT -->
 
-<!-- Mirrored from hsrtraveldelhi.co.in/taxi-service-in-south-delhi.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Nov 2025 05:35:40 GMT -->
+<!-- Mirrored from hsrtraveldelhi.co.in/delhi-to-shimla-taxi.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Nov 2025 05:37:30 GMT -->
 </html>
