--- a/delhi-to-kasauli.html
+++ b/delhi-to-kasauli.html
@@ -586,7 +586,7 @@
                 <!-- end places -->
             </div>
         </div>
-     <footer class="footer">
+      <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-2">
@@ -626,29 +626,7 @@
                             <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Vehicle</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <label>Popular Vehicle</label>
-                        <ul>
-                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
-                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
-                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
-                            <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
-                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
-                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
-                            <li><a href="tata-indigo-car.html">Tata Indigo Taxi</a></li>
-                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
-                        </ul>
-                        <!--<ul>-->
-                        <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Maruti Suzuki Baleno Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Toyota Fortuner Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Tata Tiago Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Honda Mobilio Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Ford Ecosport Taxi</a></li>-->
-
-                        <!--</ul>-->
-                    </div>
-                    <div class="col-md-2">
+                          <div class="col-md-4">
                         <label>Our Services</label>
                         <ul>
                             <li><a href="taxi-booking-on-rent.html">Vehicle Service in Delhi</a></li>
@@ -662,6 +640,35 @@
                             <li><a href="airport-car-rental-services.html">Airport Vehicle</a></li>
                         </ul>
                     </div>
+                    <div class="col-md-2">
+                        <label>Popular Vehicle</label>
+                        <ul>
+                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
+                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
+                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
+                            <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
+                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
+                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
+                            <li><a href="tampu-12seat.html">Tampu 12 Seat Vehicle</a></li>
+                            <li><a href="tampu-17seat.html">Tampu 17 Seat Vehicle</a></li>
+                            <li><a href="tampu-26seat.html">Tampu 26 Seat Vehicle</a></li>
+                            <li><a href="bus-21seat.html">Bus 21 Seat Vehicle</a></li>
+                            <li><a href="bus-27seat.html">Bus 27 Seat Vehicle</a></li>
+                            <li><a href="bus-49seat.html">Bus 49 Seat Vehicle</a></li>
+                            <li><a href="bus-55seat.html">Bus 55 Seat Vehicle</a></li>
+                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
+                        </ul>
+                        <!--<ul>-->
+                        <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Maruti Suzuki Baleno Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Toyota Fortuner Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Tata Tiago Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Honda Mobilio Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Ford Ecosport Taxi</a></li>-->
+
+                        <!--</ul>-->
+                    </div>
+              
                 </div>
                 <div class="row bottom">
                     <div class="col-md-6">
