--- a/index-2.html
+++ b/index-2.html
@@ -176,9 +176,17 @@
                                                 <a class="dropdown-item" href="taxi-service-in-south-delhi.html">Vehicle
                                                     Services in South Delhi</a>
                                             </li>
-                                            <li>
+                                           <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
                                                     Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Chardham Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="Spiritual-tour.html">
+                                                    Spiritual Vehicle Services</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -529,7 +537,8 @@
 	    <!-- deal slider  -->
 	    <div class="full-width w-bg">
 	    	<div class="container">
-		    	<h1 class="title">Book Vehicle on Rent</h1>
+		    	<h1 class="title">Book Vehicle on Rent Call Now: 8800804024 </h1>
+		    	<!-- <h1 class="title">Book Vehicle on Rent </h1> -->
 		    	<p>HSR Travel Delhi has been proudly serving Delhi for over 15 years, offering reliable and affordable car rental services. Whether you need a Maruti Swift Dzire, Innova, or any other vehicle, you can easily book Vehicle on rent with us for all your travel needs. From sightseeing tours and business meetings to special occasions and airport transfers, we provide well-maintained Vehicle with experienced drivers. Our drivers have excellent knowledge of local routes, ensuring a smooth and hassle-free journey every time. Choose HSR Travel Delhi for comfort, safety, and dependable service that makes your travel in and around Delhi truly enjoyable.
  
  </p>
@@ -911,29 +920,7 @@
                             <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Vehicle</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
-                        <label>Popular Vehicle</label>
-                        <ul>
-                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
-                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
-                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
-                            <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
-                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
-                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
-                            <li><a href="tata-indigo-car.html">Tata Indigo Taxi</a></li>
-                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
-                        </ul>
-                        <!--<ul>-->
-                        <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Maruti Suzuki Baleno Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Toyota Fortuner Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Tata Tiago Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Honda Mobilio Taxi</a></li>-->
-                        <!--<li><a href="javascript:void(0);">Ford Ecosport Taxi</a></li>-->
-
-                        <!--</ul>-->
-                    </div>
-                    <div class="col-md-2">
+                          <div class="col-md-4">
                         <label>Our Services</label>
                         <ul>
                             <li><a href="taxi-booking-on-rent.html">Vehicle Service in Delhi</a></li>
@@ -947,6 +934,35 @@
                             <li><a href="airport-car-rental-services.html">Airport Vehicle</a></li>
                         </ul>
                     </div>
+                    <div class="col-md-2">
+                        <label>Popular Vehicle</label>
+                        <ul>
+                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
+                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
+                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
+                            <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
+                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
+                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
+                            <li><a href="tampu-12seat.html">Tampu 12 Seat Vehicle</a></li>
+                            <li><a href="tampu-17seat.html">Tampu 17 Seat Vehicle</a></li>
+                            <li><a href="tampu-26seat.html">Tampu 26 Seat Vehicle</a></li>
+                            <li><a href="bus-21seat.html">Bus 21 Seat Vehicle</a></li>
+                            <li><a href="bus-27seat.html">Bus 27 Seat Vehicle</a></li>
+                            <li><a href="bus-49seat.html">Bus 49 Seat Vehicle</a></li>
+                            <li><a href="bus-55seat.html">Bus 55 Seat Vehicle</a></li>
+                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
+                        </ul>
+                        <!--<ul>-->
+                        <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Maruti Suzuki Baleno Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Toyota Fortuner Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Tata Tiago Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Honda Mobilio Taxi</a></li>-->
+                        <!--<li><a href="javascript:void(0);">Ford Ecosport Taxi</a></li>-->
+
+                        <!--</ul>-->
+                    </div>
+              
                 </div>
                 <div class="row bottom">
                     <div class="col-md-6">
