--- a/fleets.html
+++ b/fleets.html
@@ -165,9 +165,17 @@
                                                 <a class="dropdown-item" href="taxi-service-in-south-delhi.html">Vehicle
                                                     Services in South Delhi</a>
                                             </li>
-                                            <li>
+                                           <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
                                                     Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Chardham Vehicle Services</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="Spiritual-tour.html">
+                                                    Spiritual Vehicle Services</a>
                                             </li>
                                         </ul>
                                     </li>
