--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 	    <!-- deal slider  -->
 	    <div class="full-width w-bg">
 	    	<div class="container">
-		    	<h1 class="title">Book Vehicle on Rent</h1>
+		    	<h1 class="title">Book Vehicle on Rent Call Now: 8800804024 </h1>
 		    	<p>HSR Travel Delhi has been proudly serving Delhi for over 15 years, offering reliable and affordable car rental services. Whether you need a Maruti Swift Dzire, Innova, or any other vehicle, you can easily book Vehicle on rent with us for all your travel needs. From sightseeing tours and business meetings to special occasions and airport transfers, we provide well-maintained Vehicle with experienced drivers. Our drivers have excellent knowledge of local routes, ensuring a smooth and hassle-free journey every time. Choose HSR Travel Delhi for comfort, safety, and dependable service that makes your travel in and around Delhi truly enjoyable.
  
  </p>
